Updates to the main branch, README.md and addressed match_archives.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "react-native-screens": "^4.9.1",
     "react-native-svg": "^15.11.2",
     "react-native-url-polyfill": "^2.0.0",
-    "supabase": "^2.15.8"
+    "supabase": "^2.15.8",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
